24-03-11 | 장창엽 | 지도- 여행코스 작업

--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -342,8 +342,9 @@ div.mapListItemBox{
 div.mapCourseListBox{
 
    height: calc( 100vh - 150px );
-	overflow : scroll !important;
-	height: calc( 100vh - 150px );
+	overflow : hidden; 
+	overflow-y : scroll !important;
+	height: calc( 100vh - 270px );
 	width: 400px;
 
 }
