24-03-11 | 박검지 | 1박 2일 & 2박 3일 결제 중

--- a/src/main/resources/static/css/info.css
+++ b/src/main/resources/static/css/info.css
@@ -27,7 +27,7 @@
 }
 
 /* 순서 정렬 칸막이 */
-.text-end>span:not(:last-child):after{
+#info .text-end>span:not(:last-child):after{
     content: "|";
     color: #797979;
     margin: 3px 8px 3px 10px;
