--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
@@ -5,6 +5,8 @@
 
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
+	<!-- 예약 버튼 -->
+	<div th:replace="~{alert/pay_modal::div}"> </div>  
 	<div class="container px-md-5">
 	<h4 class="text-center my-5">코스 저장하기</h4>
 		<div class="row mx-3 mx-md-5 justify-content-center">
@@ -23,6 +25,11 @@
 						<h3 class="pgj">
 						<span class="rounded-4 p-3 bg-mainbg text-white">Day-2</span>
 					</h3></div>
+											<div class="col mx-auto my-5 text-end ">
+							<p>
+								예상 가격 <span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight amount"></span>
+							</p>
+						</div>
 						
 				<button id="mapday1"
 					class="mapday1 btn rounded-pill bg-white pe-5 shadow">1일차</button>
@@ -223,15 +230,19 @@
 						<input type="hidden" th:value="${aiccFood4.get(0).getEvent_num()}" name="day2aiccFood2"/>
 						
 						
+						<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
+						<input type="hidden" name="day" th:value="${day}" />
+						<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
+						<input type="hidden" class="discountValue" id="discount" name="discount" value="" />
+						<input type="hidden" class="amountValue" id="amount" name="amount" value="" />
 						
-					
-					
-					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
-					<input type="hidden" name="day" th:value="${day}" />
-					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
-					<div class="col-12 mx-auto mt-4 text-end">
-						<button type="submit" class="btn btn-main "> 코스 등록</button>
-					</div>
+						<div class="col-12 mx-auto mt-4 text-end d-flex justify-content-between">
+							<button type="button" id="btn-pay" class="btn btn-main rounded-pill btn-map-step hstack">
+								<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
+									코스 저장하고 예약하기
+							</button>
+							<button type="submit" class="btn btn-main rounded-pill px-3"> 코스 등록</button>
+						</div>
 					</div>
 			</form>
 
@@ -582,5 +593,74 @@
 
 		}
 	</script>
+	
+	
+<!-- 비동기로 pay 모달 열기 -->
+<script>
+$(document).ready(function() {
+    // #btn-pay 버튼을 클릭했을 때의 동작
+    $("#btn-pay").click(function() {
+        var courseName = $("#Course_name").val();
+        var courseContent = $("#Course_content").val();
+       
+
+        var formattedAmount = amount.toLocaleString();
+        var formattedDiscount = discount.toLocaleString();
+        
+        // 폼 데이터 가져오기
+        var formData = $("#myForm").serialize();
+        
+     	// 유효성 검사를 수행합니다.
+        var courseName = $("#Course_name").val().trim();
+        var courseContent = $("#Course_content").val().trim();   
+     
+        if (courseName === null || courseName === '') {
+            alert('코스 이름을 입력하세요.');
+            event.preventDefault(); // 폼 제출 중지
+            errors.push('코스 명을 입력하세요.');
+        }
+        if (courseContent === null || courseContent === '') {
+            alert('코스 내용을 입력하세요.');
+            event.preventDefault(); // 폼 제출 중지
+            errors.push('코스 내용을 입력하세요.');
+        }
+        
+        // 코스 명을 formData에 추가
+        formData += "&courseName=" + courseName;
+        formData += "&courseContent=" + courseContent;
+        formData += "&amount=" + amount;
+        formData += "&discount=" + discount;
+        
+        // 코스 명을 표시할 요소에 courseName 값을 넣음
+        $(".courseNameDisplay").text(courseName);
+        $(".courseContentDisplay").text(courseContent);
+
+        document.querySelector('.courseNameValue').value = courseName; // 코스명 out
+       
+        
+        // 첫 번째 AJAX 요청: 데이터 저장
+        $.ajax({
+            type: "POST",
+            url: "cours_Save_insert",
+            data: formData,
+            success: function(response) {
+                // 데이터 저장에 성공한 경우
+        		console.log("amount 값은 "+amount);
+                console.log("데이터 저장 성공!");
+    		    
+                 $('#feed_del_Modal').modal('show');
+                console.log(response.courseNum);
+                document.querySelector('.courseNum').value = response.courseNum;  
+            },
+            error: function(xhr, status, error) {
+                // 데이터 저장에 실패한 경우
+                console.error("데이터 저장 실패!");
+                console.error("에러: ", error);
+            }
+        });
+    });
+});
+
+</script>
 </body>
 </html>
