--- a/src/main/resources/templates/thymeleaf/home/home.html
+++ b/src/main/resources/templates/thymeleaf/home/home.html
@@ -300,7 +300,7 @@
 	
 	<!-- 여행코스 짜기 배너 -->
 	<div class="pt-2 rounded-1 m-5 mt-2 bg-main bg-opacity-25">
-                <div class=" row bg-white p-2">
+                <div class=" row bg-white p-2 justify-content-around">
                     
                     <div class="col-12 col-md-6 ms-5 bg-white rounded-1 p-3">
                     <h3 class="mt-4">여행 코스 짜기 고민 되시나요?</h3>
@@ -665,7 +665,7 @@
 	<div class="col-11 col-lg-6 home_info_data_text text-start m-auto mt-3 mt-md-0" >
 		<div class="fs-4 fw-bold">
 			
-			<a href="info" class="text-dark px-2 f17 ">함께 모여서 소통하는<span class="f22 highlight px-0"> 동행</span> 에 우리 함께 해요</a>
+			<a href="info" class="text-dark px-2 f17 ">함께 모여서 소통하는 <span class="f22 highlight px-0">동행</span> 에 우리 함께 해요</a>
 		</div>
 		<th:block th:each="band:${randomBandList_home}">
 		<div class="fs-5 my-2 border-bottom py-2" >
