--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -110,7 +110,8 @@
                <input type="hidden" class="day0" th:value="${day}" name="day"/>
                <input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 
-               <input type="hidden" class="realAmountValue" value="" name="amount"/>
+               <input type="hidden" class="amountValue" value="" name="amount"/>
+               <input type="hidden" class="realAmountValue" value="" name="realAmount"/>
                <input type="hidden" class="realDiscountValue" value="" name="discount"/>
                
                <!-- 반복될 부분 day1 -->
