--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -145,8 +145,8 @@
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 					<input type="hidden" name="day" th:value="${day}" />
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
-					<input type="hidden" class="discountValue" id="discount" name="discount" value="" />
-					<input type="hidden" class="amountValue" id="amount" name="amount" value="" />
+					<input type="text" id="amount" name="amount" th:value="${realAmount}" />
+					<input type="text" id="discount" name="discount" th:value="${discount}" />
 					
 				
 					<span class="discount text-white"></span>
