--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -21,7 +21,7 @@
 					</h3>
 					</div>
 					<div class="col mx-auto my-5 text-end ">
-						<p>예상 가격 <span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight amount"></span></p>
+						<p>예상 가격 <span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight"></span></p>
 					</div>
 				</div>
 			</div>
@@ -145,8 +145,8 @@
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}" />
 					<input type="hidden" name="day" th:value="${day}" />
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}" />
-					<input type="text" id="amount" name="amount" th:value="${realAmount}" />
-					<input type="text" id="discount" name="discount" th:value="${discount}" />
+					<input type="hidden" id="amount" name="amount" th:value="${realAmount}" />
+					<input type="hidden" id="discount" name="discount" th:value="${discount}" />
 					
 				
 					<span class="discount text-white"></span>
