--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
@@ -31,11 +31,11 @@
 							<span class="rounded-4 p-3 bg-mainbg text-white">Day-3</span>
 							</h3>
 						</div>
-						<div class="col mx-auto my-5 text-end ">
-							<p>
-								 예상 가격 <span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight amount"></span>
-							</p>
-						</div>
+					</div>
+					<div class="col mx-auto my-5 text-end ">
+						<p>
+							 예상 가격 <span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight amount"></span>
+						</p>
 					</div>
 					<button id="mapday1" class="mapday1 btn rounded-pill bg-white pe-5 shadow">1일차</button>
 					<button id="mapday2" class="mapday2 btn rounded-pill bg-white pe-5 shadow">2일차</button>
@@ -217,8 +217,8 @@
 					<input type="hidden" name="memberId" th:value="${session.Member_Id}"/>
 					<input type="hidden" name="day" th:value="${day}"/>
 					<input type="hidden" name="img" th:value="${aicc.get(0).getEvent_thumbnail()}"/>
-					<input type="text" id="amount" name="amount" th:value="${realAmount}" />
-					<input type="text" id="discount" name="discount" th:value="${discount}" />
+					<input type="hidden" id="amount" name="amount" th:value="${realAmount}" />
+					<input type="hidden" id="discount" name="discount" th:value="${discount}" />
 					<div class="col-12 mx-auto mt-4 text-end d-flex justify-content-between">
 						<button type="button" id="btn-pay" class="btn btn-main rounded-pill btn-map-step hstack">
 						<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt=""/>
