--- a/src/main/resources/templates/thymeleaf/home/home2.html
+++ b/src/main/resources/templates/thymeleaf/home/home2.html
@@ -105,7 +105,7 @@ Copyright (c) 2023 by Wakana Y.K. (https://codepen.io/wakana-k/pen/KKJgQXa)
 	Carrier
 </h1>
 
-<h5 class="mt-5 highlight">여행 계획 Carrier 와 함께 오늘도 우리는 Carrier</h5>
+<h5 class="mt-5 highlight">여행 계획 Carrier 와 함께</h5>
 </main>
 </a>
 <!--footer-->
