--- a/src/main/resources/templates/thymeleaf/band/myBand.html
+++ b/src/main/resources/templates/thymeleaf/band/myBand.html
@@ -192,11 +192,10 @@
                            <div class="myBand_content_item_content">
                         	<div th:utext="${myBandFeedList.getBand_feed_content()}"></div>
                            </div>
-                           <div class="row justify-content-end">
-                           	<div class="col-2">
-                           		<a class="btn btn-dark d-md-inline-block f13" th:href="@{'/bandFeedView?bandUrl='+${myBandFeedList.getBand_code()}+'&feednum='+${myBandFeedList.getBand_feed_num()}}">게시글 전체보기</a>
+                           <div class="row justify-content-end mx-0 px-0 mt-3">
+                           	<div class=" col-md-3 col-sm-12 float-end ms-auto  mx-0 px-0">
+                           		<a class="btn btn-dark d-md-inline-block f13 float-end" th:href="@{'/bandFeedView?bandUrl='+${myBandFeedList.getBand_code()}+'&feednum='+${myBandFeedList.getBand_feed_num()}}">게시글 전체보기</a>
                            	</div>
-                           	
                            </div>
                         	<!-- 밴드 피드 댓글 -->
                         	<hr />
