--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -420,7 +420,7 @@
          
          // 예상금액 //
          oil = Math.round((totalDistance / 1000) * 170); // oil 값 in
-         amount = oil + stay + food + beverage;
+         amount = oil + food + beverage;
          realAmount = stay;
          realDiscount = realAmount-discount;
          
