--- a/src/main/resources/templates/thymeleaf/map/mapDay3.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay3.html
@@ -834,8 +834,8 @@
 					.toFixed(2);
 	         // 예상금액 //
 	         oil = Math.round((totalDistance / 1000) * 170); // oil 값 in
-	         amount = oil + stay + food + beverage + stay + food + beverage + stay + food + beverage;
-	         realAmount = stay + stay + stay;
+	         amount = oil + food + beverage + food + stay + food + beverage + food + stay + food + beverage + food;
+	         realAmount = stay + stay;
 	         realDiscount = realAmount-discount;
 	         document.querySelector('.amount').innerText = amount.toLocaleString()+"원"; // 최종 금액 out
 	         document.querySelector('.amountValue').value = amount;
