--- a/src/main/resources/templates/thymeleaf/aicc/Course_view.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_view.html
@@ -5,8 +5,9 @@
 
 <body>
 	<div th:replace="~{nav/nav::nav}"></div>
+	<!-- 예약 모달 -->
+	<div th:replace="~{alert/pay_modal_Course::div}"> </div>  
 	<div class="container">
-	
 	<h4 class="text-center my-5" ><span th:text="${list.get(0).getMember_Id()}"></span> 의 <span th:text="|[${list.get(0).getCourse_Name()}]|"></span></h4>
 		<div class="row mx-0 justify-content-center">
 			<div class="row">
@@ -24,13 +25,13 @@
 			<div class="col-12 mx-auto my-5">
 					<h5>코스 메모</h5>
 					<hr />
-					<p th:text="${list.get(0).getCourse_content()}"></p>
+					<p th:utext="${list.get(0).getCourse_content()}"></p>
 
 				</div>
 				<div class="col mx-auto my-5 text-end ">
 					
-						<span> 총 길이  </span><span th:text="${totalDistance}" class="highlight"></span>
-					
+						<span> 총 길이  </span><span th:text="${totalDistance}" class="highlight"></span><br />
+						<span> 예상 금액 </span><span th:text="${#numbers.formatDecimal(amount, 3, 'COMMA', 0, 'POINT') + ' 원'}" class="highlight"></span><br />
 				</div>
 				
 			</div>
@@ -115,13 +116,23 @@
 						<button type="button" class="btn btn-dark m-1" th:text="|# ${aicc.get(0).getEvent_area()}|"></button>
 						
 					</div>
-					<div class="col-12 mx-auto mt-4 text-end">
+					<div class="col-12 mx-auto mt-4 text-end d-flex gap-1 justify-content-end">
+					<div class="flex-grow-1 wrap-tooltip">
+						<div class="btn-tooltip">
+							<span class="tooltip text-dark mb-5">* 카페와 맛집 가격을 제외한 2인 기준 숙박 결제 금액 입니다.<br /><b>1박 2일과 2박 3일 코스</b>에서 사용 가능합니다</span>
+							<button type="button"
+								id = "btn-pay"
+								class="btn btn-main-over rounded-pill btn-map-step hstack">
+								<img src="../img/mypage/coin.png" width="36" height="36" class="me-2" alt="" />
+									예약하기
+							</button>
+						</div>
+					</div>
 						<th:block
 							th:if="${session.Member_Id==list.get(0).getMember_Id()||session.Member_Id=='admin'}">
-						<button type="submit" class="btn btn-main "> 코스 수정</button>
-						<a href="#" data-bs-toggle="modal" data-bs-target="#feed_del_Modal" class="btn btn-skyb"
+						<button type="submit" class="btn btn-main py-2"> 코스 수정</button>
+						<a href="#" data-bs-toggle="modal" data-bs-target="#feed_del_Modal" class="btn btn-skyb py-2 hstack"
 						>코스 삭제</a>
-					
 						</th:block>
 					</div>
 				
