--- a/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
@@ -42,7 +42,7 @@
 			<div class="col-12 mx-auto my-5">
 					<h5>코스 메모</h5>
 					<hr />
-					<p th:text="${list.get(0).getCourse_content()}"></p>
+					<p th:utext="${list.get(0).getCourse_content()}"></p>
 
 				</div>
 				<div class="col mx-auto my-5 text-end ">
