--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
@@ -518,7 +518,7 @@ $(document).ready(function() {
                 // 데이터 저장에 성공한 경우
         		console.log("amount 값은 "+amount);
                 console.log("데이터 저장 성공!");
-                 $('#feed_del_Modal').modal('show');
+                 $('#pay_modal').modal('show');
                 console.log(response.courseNum);
                 document.querySelector('.courseNum').value = response.courseNum;  
             },
