24-03-12 | 박검지 | 결제 성공 페이지에서 주문번호 출력 요청으로 인한 수정 및 결제 번호 중복 방지 코드 추가

--- a/src/main/resources/templates/thymeleaf/Member/success.html
+++ b/src/main/resources/templates/thymeleaf/Member/success.html
@@ -19,6 +19,9 @@
 					<!-- <p id="paymentKey">환불키</p> -->
 					<div class="text-start px-5 px-lg-5 mx-lg-5">
 						<p>
+							주문 번호 : <span th:text="${orderId}"></:span>
+						</p>
+						<p>
 							DATE : <span th:text="${date}"></:span>
 						</p>
 						<p>
@@ -39,6 +42,19 @@
 			</div>
 		</div>
 	</div>
+    <script>
+        window.onkeydown = function (event) {
+            var kcode = event.keyCode;
+            if (kcode == 8 || kcode == 116) event.returnValue = false;
+        }
+
+        window.history.pushState(null, null, window.location.href);
+        window.onpopstate = function () {
+            window.history.go(1);
+        };
+
+    </script>
 
 </body>
+
 </html>
