--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -30,12 +30,13 @@
                 </div>
                 <!-- 해당 메뉴 아이콘 -->
                 <div class="col-12 text-center my-menu-ico-parent d-flex justify-content-around f13">
-                    <a href="#" class="my-menu-ico">
+                    <!-- <a href="#" class="my-menu-ico">
                         <div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
                             <img src="../img/mypage/menu_ico_1.png" class="img-fluid p-2" alt="...">
                         </div>
                         <span>예약</span>
-                    </a><a href="/band" class="my-menu-ico">
+                    </a> -->
+                    <a href="/band" class="my-menu-ico">
                     <div class="rounded-circle overflow-hidden m-1 p-1 mb-0 bg-white">
                         <img src="../img/mypage/menu_ico_2.png" class="img-fluid p-2" alt="...">
                     </div>
@@ -157,7 +158,7 @@
                     </div>
                 </div>
                 <!-- 즐겨찾기 좋아요/팔로잉 -->
-                <div class="col-12 col-lg mt-4">
+                <div class="col-12 col-lg">
                     <div class="row gap-4">
                         <!-- 팔로잉 영역 -->
                         <!-- <div class="col-12 border rounded-4 p-4 pb-3">
